--- a/app/templates/pages/includes/page_card.html
+++ b/app/templates/pages/includes/page_card.html
@@ -1,7 +1,7 @@
 {% load mezzanine_tags organization_tags %}
 <a href="{{ object.get_absolute_url }}" title="{{ object.title }}" class="page-box">
     <div class="page-box__image">
-      {% with object.images.all|get_type:'card' as image %}
+      {% with object.get_content_model.images.all|get_type:'card' as image %}
         <img src="{{ MEDIA_URL }}{% thumbnail image.file 900 400 %}" />
       {% endwith %}
     </div>
