--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -4,7 +4,7 @@
 {% block title %}{{ title }} | Mezzanine{% endblock %}
 
 {% block extrahead %}
-<link rel="stylesheet" href="{% static "mezzanine/css/admin/global.css" %}">
+<link rel="stylesheet" type="text/css" href="{% static "mezzanine/css/admin/global.css" %}">
 <style>
     /* These are set in PageAdmin's view methods, and mezzanine.utils.admin.SingletonAdmin */
     {% if hide_delete_link or singleton %}.submit-row .deletelink {display:none !important;}{% endif %}
@@ -42,7 +42,6 @@ jQuery(function($) {
     $("#id_sitepermissions-__prefix__-sites").parent().parent().parent().remove();
 });
 </script>
-
 {% endblock %}
 
 {% block rtl_styles %}
@@ -73,4 +72,5 @@ jQuery(function($) {
         {% endif %}
     {% endif %}
 {% endif %}
+<link rel="stylesheet" type="text/css" href="{% static "admin/css/organization.css" %}" />
 {% endblock %}
