--- a/templates/agenda/includes/event_card.html
+++ b/templates/agenda/includes/event_card.html
@@ -1,14 +1,17 @@
-{% load i18n future mezzanine_tags event_tags keyword_tags disqus_tags %}
+{% load i18n future mezzanine_tags event_tags keyword_tags disqus_tags organization_tags %}
 
 {% block event_list_event_title %}
     <div class="event__card msry__item">
-        {% if event.featured_image %}
+      {% with event.images.all|get_type:'card' as image %}
+        {% if image %}
             {% block event_list_event_featured_image %}
+
                 <a href="{{ event.get_absolute_url }}" class="event__thumbnail">
-                    <img src="{{ MEDIA_URL }}{% thumbnail event.featured_image 500 500 %}" width="500" height="500">
+                    <img src="{{ MEDIA_URL }}{% thumbnail image.file 500 500 %}" width="500" height="500">
                 </a>
             {% endblock %}
         {% endif %}
+      {% endwith %}
         <h3 class="event__name">
             <a href="{{ event.get_absolute_url }}">{{ event.title }}</a>
         </h3>
@@ -42,38 +45,5 @@
     Détails
 </a>
 {% endblock %}
-
-{% comment %}
-{% block event_list_event_links %}
-<div class="event__detail">
-{% keywords_for event as tags %}
-{% if tags %}
-<ul class="list-inline tags">
-{% trans "Tags" %}:
-{% spaceless %}
-{% for tag in tags %}
-<li><a href="{% url "event_list_tag" tag.slug %}" class="tag">{{ tag }}</a></li>
-{% endfor %}
-{% endspaceless %}
-</ul>
-{% endif %}
-<p>
-{% if event.allow_comments %}
-/
-{% if settings.COMMENTS_DISQUS_SHORTNAME %}
-<a href="{{ event.get_absolute_url }}#disqus_thread"
-    data-disqus-identifier="{% disqus_id_for event %}">
-    {% trans "Comments" %}
-</a>
-{% else %}
-<a href="{{ event.get_absolute_url }}#comments">
-    {% blocktrans count comments_count=event.comments_count %}{{ comments_count }} comment{% plural %}{{ comments_count }} comments{% endblocktrans %}
-</a>
-{% endif %}
-{% endif %}
-</p>
-</div>
-{% endblock %}
-{% endcomment %}
 
 </div>
