--- a/app/templates/agenda/event_list.html
+++ b/app/templates/agenda/event_list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load i18n future mezzanine_tags event_tags keyword_tags disqus_tags %}
+{% load i18n future mezzanine_tags event_tags keyword_tags disqus_tags organization_tags %}
 
 {% block meta_title %}{% if page %}{{ page.richtextpage.meta_title }}{% else %}{% trans "Events" %}{% endif %}{% endblock %}
 
