--- a/templates/pages/includes/page_card.html
+++ b/templates/pages/includes/page_card.html
@@ -1,8 +1,10 @@
 {% load mezzanine_tags organization_tags %}
 <a href="{{ object.get_absolute_url }}" title="{{ object.title }}" class="page-box">
     <div class="page-box__image">
-      {% with object.get_content_model.images.all|get_type:'card' as image %}
-        <img src="{{ MEDIA_URL }}{% thumbnail image.file 900 400 %}" />
+      {% with object.get_content_model.images.all|get_type:'card' as images %}
+       {% if images %}
+        <img src="{{ MEDIA_URL }}{% thumbnail images.0.file 900 400 %}" />
+       {% endif %}
       {% endwith %}
     </div>
     <div class="page-box__content">
