--- a/templates/pages/custompage.html
+++ b/templates/pages/custompage.html
@@ -1,5 +1,5 @@
 {% extends "pages/page.html" %}
-{% load i18n mezzanine_tags keyword_tags  pages_tags organization_tags %}
+{% load i18n mezzanine_tags keyword_tags pages_tags organization_tags %}
 
 {% block meta_title %}{{ page.meta_title }}{% endblock %}
 
@@ -59,30 +59,7 @@
 {% endblock %}
 
 {% block page_sub_content %}
-    {% if page.custompage.blocks.all %}
-        <div class="white-bg">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <hr class="mt0" />
-                        {% for pageblock in page.custompage.blocks.all %}
-                            <div class="row" data-summary-content>
-                                <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg">
-                                    {% if not forloop.first and pageblock.with_separator %}
-                                        <hr />
-                                    {% endif %}
-                                    <h2 class="dotted">{{ pageblock.title }}</h2>
-                                    {% if pageblock.content %}
-                                         {{ pageblock.content|richtext_filters|safe }}
-                                    {% else %}
-                                        {% lorem 3 p %}
-                                    {% endif %}
-                                </div>
-                            </div>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-        </div>
-    {% endif %}
+   {% with page.custompage.blocks.all as blocks %}
+     {% include "core/inc/block.html" %}
+  {% endwith %}
 {% endblock %}
