--- a/templates/pages/teampage.html
+++ b/templates/pages/teampage.html
@@ -69,32 +69,7 @@
 {% endblock %}
 
 {% block page_sub_content %}
-
-    {% if page.teampage.pageblock_set.all %}
-        <div class="white-bg pb2">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <hr class="mt0" />
-                        {% for pageblock in page.teampage.pageblock_set.all %}
-                            <div class="row" data-summary-content>
-                                <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg">
-                                    {% if not forloop.first and pageblock.with_separator %}
-                                        <hr />
-                                    {% endif %}
-                                    <h2 class="dotted">{{ pageblock.title }}</h2>
-                                    {% if pageblock.content %}
-                                         {{ pageblock.content|richtext_filters|safe }}
-                                    {% else %}
-                                        {% lorem 3 p %}
-                                    {% endif %}
-                                </div>
-                            </div>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
-        </div>
-    {% endif %}
-
+  {% with page.teampage.blocks.all as blocks %}
+    {% include "core/inc/block.html" %}
+  {% endwith %}
 {% endblock %}
