--- a/app/templates/core/inc/block.html
+++ b/app/templates/core/inc/block.html
@@ -6,6 +6,9 @@
                 <div class="col-sm-12">
                     <hr class="mt0" />
                     {% for block in blocks %}
+                        {% if block.background_color %}
+                          color style : {{ block.background_color }}
+                        {% endif %}
                         <div class="row" data-summary-content>
                             <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2 white-bg">
                                 {% if not forloop.first and block.with_separator %}
