--- a/templates/base.html
+++ b/templates/base.html
@@ -32,8 +32,9 @@
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,700,900,300italic|Oswald:400,300,700' rel='stylesheet' type='text/css'>
 
     {% compress css %}
-    <link rel="stylesheet" href="{% static "css/index.min.css" %}">
     <link rel="stylesheet" href="{% static "vendors/font-awesome/css/font-awesome.css" %}">
+    <link rel="stylesheet" href="{% static "vendors/lightslider/dist/css/lightslider.css" %}">
+    <link rel="stylesheet" href="{% static "css/index.min.css" %}">
     {% endcompress %}
 
     {% block extra_head %}{% endblock %}
