--- a/static/src/sass/modules/_all.scss
+++ b/static/src/sass/modules/_all.scss
@@ -8,6 +8,9 @@
 @import 'boxes/article-box';
 @import 'boxes/page-box';
 
+// Sliders
+@import 'sliders/slider-page';
+
 // Page modules
 @import 'breadcrumb';
 @import 'pagination';
