--- a/app/templates/magazine/article/article_detail.html
+++ b/app/templates/magazine/article/article_detail.html
@@ -78,11 +78,12 @@
 
     {% if article.related_articles.all %}
 
+        <hr class="mt0 mb0" />
         <div class="white-bg pb2">
             <div class="container">
                 <div class="row tac">
                     <div class="col-xs-12">
-                        <h2 class="dashed dashed--center">{% trans "Also discover" %}</h2>
+                        <h2 class="dashed dashed--center mt2">{% trans "Also discover" %}</h2>
                     </div>
                 </div>
                 <div class="row tac">
