--- a/app/templates/pages/page.html
+++ b/app/templates/pages/page.html
@@ -62,6 +62,8 @@
 
         {% block page_slider %}
         {% endblock %}
+        {% block page_video %}
+        {% endblock %}
         {% block page_sub_content %}
         {% endblock %}
         {% block page_related_content %}
