--- a/app/templates/pages/custompage.html
+++ b/app/templates/pages/custompage.html
@@ -58,6 +58,24 @@
 
 {% endblock %}
 
+{% block page_slider %}
+  {% with page.custompage.images.all|get_type:'page_slider' as slider_images %}
+    {% if slider_images %}
+      {% include 'core/inc/slider.html' %}
+    {% endif %}
+  {% endwith %}
+{% endblock %}
+
+{% block page_video %}
+    {% with page.custompage.videos.all as videos %}
+      {% if videos %}
+        {% include 'core/inc/video.html' %}
+      {% endif %}
+    {% endwith %}
+{% endblock %}
+{% block page_audio %}
+{% endblock %}
+
 {% block page_sub_content %}
    {% with page.custompage.blocks.all as blocks %}
      {% include "core/inc/block.html" %}
