Task #109 : creating audio templates

--- a/app/templates/pages/custompage.html
+++ b/app/templates/pages/custompage.html
@@ -58,6 +58,14 @@
 
 {% endblock %}
 
+{% block page_audio %}
+  {% with page.custompage.audios.all as audios %}
+    {% if audios %}
+      {% include 'core/inc/audio.html' %}
+    {% endif %}
+  {% endwith %}
+{% endblock %}
+
 {% block page_slider %}
   {% with page.custompage.images.all|get_type:'page_slider' as slider_images %}
     {% if slider_images %}
@@ -72,8 +80,6 @@
         {% include 'core/inc/video.html' %}
       {% endif %}
     {% endwith %}
-{% endblock %}
-{% block page_audio %}
 {% endblock %}
 
 {% block page_sub_content %}
