--- a/app/templates/pages/page.html
+++ b/app/templates/pages/page.html
@@ -59,7 +59,8 @@
             </div>
 
         </div>
-
+        {% block page_audio %}
+        {% endblock %}
         {% block page_slider %}
         {% endblock %}
         {% block page_video %}
